[tool.poetry]
name = "summarizeai"
version = "0.1.0"
description = ""
authors = ["Aditya Patwa <adityapatwa.tech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
langchain = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
