[tool.poetry]
name = "summarizeai"
version = "0.1.0"
description = ""
authors = ["Aditya Patwa <adityapatwa.tech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
langchain = "^0.2.7"
langchain-huggingface = "^0.0.3"
youtube-transcript-api = "^0.6.2"
pytube = "^15.0.0"
langchain-community = "^0.2.7"
beautifulsoup4 = "^4.12.3"
langchain-chroma = "^0.1.2"
protobuf = "==3.20.*"
langchainhub = "^0.1.20"
pysqlite3-binary = "^0.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
